test/parsing/fail/if_empty_alternative.j
class A {
  Void main() {
    if (2 == 1) {
      return;
    } else {
    }
  }
}
